ISSUP-5067 change url path for get roles, deprecate old one
