# modules/dxp/apps/osb/osb-koroneiki/osb-koroneiki-phloem/osb-koroneiki-phloem-rest-impl/src/main/java/com/liferay/osb/koroneiki/phloem/rest/internal/resource/v1_0/ContactRoleResourceImpl.java
@@ -222,6 +222,16 @@ public class ContactRoleResourceImpl
 	}
 
 	@Override
+	public ContactRole getContactRoleByTypeContactRoleTypeByNameContactRoleName(
+			String contactRoleType, String contactRoleName)
+		throws Exception {
+
+		return ContactRoleUtil.toContactRole(
+			_contactRoleService.getContactRole(
+				contactRoleName, contactRoleType));
+	}
+
+	@Override
 	public Page<ContactRole> getContactRolesPage(
 			String search, Filter filter, Pagination pagination, Sort[] sorts)
 		throws Exception {
